--- a/book-network/src/main/resources/templates/activate_account.html
+++ b/book-network/src/main/resources/templates/activate_account.html
@@ -33,11 +33,17 @@
             width: 300px;
             padding: 10px;
             display: block;
-            background-color: #5a5af6;
+            background-color: #77acf1;
             margin: auto;
             text-align: center;
             border-radius: 10px;
             box-shadow: 0px 0px 1px rgba(0,0,0,0.4);
+        }
+        .activation-link:hover {
+            opacity: 0.8;
+        }
+        a {
+            text-decoration: none;
             color: white;
         }
     </style>
