--- a/book-network-ui/src/app/book/pages/book-list/book-list.component.html
+++ b/book-network-ui/src/app/book/pages/book-list/book-list.component.html
@@ -1,7 +1,73 @@
 <h3>Books list</h3>
+<div *ngIf="message" class="alert"
+     [class.alert-success]="level === 'success'"
+     [class.alert-danger]="level === 'error'"
+>
+  {{message}}
+</div>
 <hr>
 <div class="d-flex justify-content-start gap-2 flex-wrap">
-  <span
+  <app-book-card
     *ngFor="let book of bookResponse.content"
-  >{{book.title }}</span>
+    [book]="book"
+    (borrow)="borrowBook($event)"
+  ></app-book-card>
 </div>
+<div class="d-flex justify-content-center mt-3">
+  <nav aria-label="Page navigation">
+    <ul class="pagination">
+      <li class="page-item">
+        <a class="page-link"
+           (click)="goToFirstPage()"
+           href="javascript:void(0)"
+           aria-label="Go to first"
+           [class.disabled]="page == 0"
+        >
+          <i class="fa-solid fa-angle-left"></i>
+        </a>
+      </li>
+      <li class="page-item">
+        <a class="page-link"
+           (click)="goToPreviousPage()"
+           href="javascript:void(0)"
+           aria-label="Previous"
+           [class.disabled]="page == 0"
+        >
+          <i class="fa-solid fa-angles-left"></i>
+        </a>
+      </li>
+
+      <li
+        *ngFor="let _ of [].constructor(this.bookResponse.totalPages);let pageIndex = index"
+        class="page-item">
+        <a class="page-link"
+           (click)="goToPage(pageIndex)"
+           href="javascript:void(0)"
+           aria-label="Page"
+           [class.active]="page == pageIndex">
+          {{pageIndex + 1}}
+        </a>
+      </li>
+
+      <li class="page-item">
+        <a class="page-link"
+           (click)="goToNextPage()"
+           href="javascript:void(0)"
+           aria-label="Next"
+           [class.disabled]="isLastPage">
+          <i class="fa-solid fa-chevron-right"></i>
+        </a>
+      </li>
+      <li class="page-item">
+        <a class="page-link"
+           (click)="goToLastPage()"
+           href="javascript:void(0)"
+           aria-label="Go to last"
+           [class.disabled]="isLastPage">
+          <i class="fa-solid fa-angles-right"></i>
+        </a>
+      </li>
+    </ul>
+  </nav>
+</div>
+
